# metathings-esp32-demo

./: README.md
example/01-led/: CMakeLists.txt  README.md  sdkconfig.defaults
example/01-led/main/: CMakeLists.txt  main.c
example/02-rs485/: CMakeLists.txt  README.md
example/02-rs485/main/: main.c
example/03-ethernet_tcp_echo/: CMakeLists.txt  README.md
example/03-ethernet_tcp_echo/main/: CMakeLists.txt  main.c
example/04-wifi_tcp_echo/: CMakeLists.txt  README.md
example/04-wifi_tcp_echo/main/: main.c
include/: gpio_button.h  gpio_light.h  mt_ethernet.h  mt_nvs_storage.h  mt_smartconfig.h
lib/: gpio_button.c  gpio_light.c  mt_ethernet.c  mt_nvs_storage.c  mt_smartconfig.c
